--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-      rel="stylesheet"
-    />
-
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="My name is Hashir Shoaib. I’m a graduate of 2020 from National University of Sciences and Technology at Islamabad with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/social-image.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Hashir Shoaib</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Akash Bala | Software Developer</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Arial', sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: #f4f4f9;
+    }
+    header {
+      background: #4CAF50;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5rem;
+    }
+    nav {
+      text-align: center;
+      margin-top: 10px;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 20px;
+      max-width: 900px;
+      margin: 20px auto;
+      background: #fff;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+    section h2 {
+      margin-bottom: 15px;
+      color: #4CAF50;
+      font-size: 1.8rem;
+    }
+    section p {
+      margin-bottom: 15px;
+    }
+    footer {
+      text-align: center;
+      padding: 10px;
+      background: #333;
+      color: #fff;
+      margin-top: 20px;
+    }
+    footer p {
+      font-size: 0.9rem;
+    }
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 10px;
+      color: #fff;
+      background: #4CAF50;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 1rem;
+    }
+    .btn:hover {
+      background: #45a049;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Akash Bala</h1>
+    <p>Software Developer | Java Enthusiast | Tech Explorer</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Hello! I am Akash Bala, a passionate software developer with over 2 years of experience in Java development, specializing in Spring Boot and API design. Currently, I work at Tata Consultancy Services (TCS), contributing to innovative solutions for clients like Jaguar and Land Rover.
+    </p>
+    <p>
+      My expertise includes working with Kafka, RabbitMQ, Docker, MySQL, and tools like Terraform and Vault. I am continuously improving my skills, mastering Kafka, and exploring new technologies to stay ahead in the tech world.
+    </p>
+    <a href="#contact" class="btn">Get in Touch</a>
+  </section>
+  <section id="skills">
+    <h2>Skills</h2>
+    <p>
+      <strong>Programming Languages:</strong> Java, SQL<br>
+      <strong>Frameworks:</strong> Spring Boot, Hibernate<br>
+      <strong>Tools & Technologies:</strong> Kafka, RabbitMQ, Docker, MySQL, Terraform, Vault<br>
+      <strong>Other Skills:</strong> Problem-solving, API Design, Debugging
+    </p>
+  </section>
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>
+      <strong>Oxo Hides API:</strong> Built a scalable API using Spring Boot, MySQL, Terraform, and Vault for a seamless backend solution.<br>
+      <strong>OneApp Notification Service:</strong> Implemented a reliable notification system with Kafka, RabbitMQ, and Docker.<br>
+      <strong>Grafana Board Presentation:</strong> Presented performance metrics effectively to a global team.
+    </p>
+  </section>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>
+      I’d love to connect! Whether you have a project in mind or just want to discuss tech, feel free to reach out.
+    </p>
+    <p>Email: akash.bala@example.com</p>
+    <p>Phone: +91-9876543210</p>
+  </section>
+  <footer>
+    <p>&copy; 2024 Akash Bala. All rights reserved.</p>
+  </footer>
+</body>
 </html>
